added config and total members to club
