# dto/club_dto.go
@@ -16,20 +16,16 @@ type UpdateClubRequest struct {
 	IsPrivate   bool    `json:"is_private"`
 }
 
-type AddMemberRequest struct {
-	UserID int64  `json:"user_id" binding:"required"`
-	Role   string `json:"role" binding:"required,oneof=admin member"`
-}
-
 /*************** RESPONSE DTOs ***************/
 
 type ClubResponse struct {
-	ID          int64     `json:"id"`
-	Name        string    `json:"name"`
-	Description *string   `json:"description,omitempty"`
-	IsPrivate   bool      `json:"is_private"`
-	CreatedBy   int64     `json:"created_by"`
-	CreatedAt   time.Time `json:"created_at"`
+	ID              int64     `json:"id"`
+	Name            string    `json:"name"`
+	Description     *string   `json:"description,omitempty"`
+	IsPrivate       bool      `json:"is_private"`
+	NumberOfMembers int       `json:"number_of_members"`
+	CreatedBy       int64     `json:"created_by"`
+	CreatedAt       time.Time `json:"created_at"`
 }
 
 type MemberResponse struct {
